--- a/cxfont.html
+++ b/cxfont.html
@@ -105,103 +105,114 @@ window.addEventListener('DOMContentLoaded', main);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">printFontFancy
       <li><a class="reference" href="#printFontFancy%2Cstring%2Cint"
-    title="printFontFancy(s: string; coltop1 = rndcol(); xpos: int = -10)">printFontFancy,<wbr>string,<wbr>int</a></li>
+    title="printFontFancy(s: string; coltop1 = rndcol(); xpos: int = -10)">printFontFancy(s: string; coltop1 = rndcol(); xpos: int = -10)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printCxFontLetter
       <li><a class="reference" href="#printCxFontLetter%2Cint%2Cint%2Cseq%5Bseq%5Bstring%5D%5D%2Cstring%2Cint"
     title="printCxFontLetter(n: int; xpos: int; cxfont: seq[seq[string]]; color: string;
-                  vertstepping: int)">printCxFontLetter,<wbr>int,<wbr>int,<wbr>seq[seq[string]],<wbr>string,<wbr>int</a></li>
+                  vertstepping: int)">printCxFontLetter(n: int; xpos: int; cxfont: seq[seq[string]]; color: string;
+                  vertstepping: int)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">bracketMatrixTyper
       <li><a class="reference" href="#bracketMatrixTyper%2Cstring%2Cint%2Cstring"
-    title="bracketMatrixTyper(s: string; xpos: int = 1; color: string = randcol())">bracketMatrixTyper,<wbr>string,<wbr>int,<wbr>string</a></li>
+    title="bracketMatrixTyper(s: string; xpos: int = 1; color: string = randcol())">bracketMatrixTyper(s: string; xpos: int = 1; color: string = randcol())</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printSlimNumber
       <li><a class="reference" href="#printSlimNumber%2Cstring%2Cstring%2Cstring%2Cint"
     title="printSlimNumber(anumber: string; fgr: string = yellowgreen;
-                bgr: string = getBg(bgDefault); xpos: int = 1)">printSlimNumber,<wbr>string,<wbr>string,<wbr>string,<wbr>int</a></li>
+                bgr: string = getBg(bgDefault); xpos: int = 1)">printSlimNumber(anumber: string; fgr: string = yellowgreen;
+                bgr: string = getBg(bgDefault); xpos: int = 1)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">createCxFont
       <li><a class="reference" href="#createCxFont%2Cstring"
-    title="createCxFont(name: string): seq[seq[string]]">createCxFont,<wbr>string</a></li>
+    title="createCxFont(name: string): seq[seq[string]]">createCxFont(name: string): seq[seq[string]]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">fprint
       <li><a class="reference" href="#fprint%2CT%2Cstring%2Cint%2Cbool%2Cbool%2Cset%5BStyle%5D%2Cstring"
     title="fprint[T](astring: T; fgr: string = getFg(fgDefault); xpos: int = 0;
           fitLine: bool = false; centered: bool = false;
-          styled: set[Style] = {}; substr: string = &quot;&quot;)">fprint,<wbr>T,<wbr>string,<wbr>int,<wbr>bool,<wbr>bool,<wbr>set[Style],<wbr>string</a></li>
+          styled: set[Style] = {}; substr: string = &quot;&quot;)">fprint[T](astring: T; fgr: string = getFg(fgDefault); xpos: int = 0;
+          fitLine: bool = false; centered: bool = false;
+          styled: set[Style] = {}; substr: string = &quot;&quot;)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">slimL
       <li><a class="reference" href="#slimL%2Cstring%2Cstring%2Cint%2Cint"
     title="slimL(astring: string; col: string = truetomato; xpos: int = 5;
-      adjuster: int = 0)">slimL,<wbr>string,<wbr>string,<wbr>int,<wbr>int</a></li>
+      adjuster: int = 0)">slimL(astring: string; col: string = truetomato; xpos: int = 5;
+      adjuster: int = 0)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printCxFontText
       <li><a class="reference" href="#printCxFontText%2Cseq%5Bint%5D%2Cint%2Cseq%5Bseq%5Bstring%5D%5D%2Cstring%2Cint%2Cint"
     title="printCxFontText(textseq: seq[int]; xpos: int = 2; cxfont: seq[seq[string]];
                 color: string = randcol(); vertstepping: int = 9;
-                kerning: int = 19)">printCxFontText,<wbr>seq[int],<wbr>int,<wbr>seq[seq[string]],<wbr>string,<wbr>int,<wbr>int</a></li>
+                kerning: int = 19)">printCxFontText(textseq: seq[int]; xpos: int = 2; cxfont: seq[seq[string]];
+                color: string = randcol(); vertstepping: int = 9;
+                kerning: int = 19)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printNim
       <li><a class="reference" href="#printNim%2Cint"
-    title="printNim(npos: int = terminalWidth() div 2 - 60)">printNim,<wbr>int</a></li>
+    title="printNim(npos: int = terminalWidth() div 2 - 60)">printNim(npos: int = terminalWidth() div 2 - 60)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printMadeWithNim
       <li><a class="reference" href="#printMadeWithNim%2Cint"
-    title="printMadeWithNim(npos: int = terminalWidth() div 2 - 60)">printMadeWithNim,<wbr>int</a></li>
+    title="printMadeWithNim(npos: int = terminalWidth() div 2 - 60)">printMadeWithNim(npos: int = terminalWidth() div 2 - 60)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printSlim
       <li><a class="reference" href="#printSlim%2Cstring%2Cstring%2Cint%2Cstring"
     title="printSlim(ss: string = &quot;&quot;; frg: string = termwhite; xpos: int = 0;
-          align: string = &quot;left&quot;)">printSlim,<wbr>string,<wbr>string,<wbr>int,<wbr>string</a></li>
+          align: string = &quot;left&quot;)">printSlim(ss: string = &quot;&quot;; frg: string = termwhite; xpos: int = 0;
+          align: string = &quot;left&quot;)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">dotMatrixFontTest
       <li><a class="reference" href="#dotMatrixFontTest"
-    title="dotMatrixFontTest()">dotMatrixFontTest</a></li>
+    title="dotMatrixFontTest()">dotMatrixFontTest()</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printFont
       <li><a class="reference" href="#printFont%2Cstring%2Cstring%2Cstring%2Cint"
     title="printFont(s: string; col: string = rndCol(); coltop: string = rndCol();
-          xpos: int = -10)">printFont,<wbr>string,<wbr>string,<wbr>string,<wbr>int</a></li>
+          xpos: int = -10)">printFont(s: string; col: string = rndCol(); coltop: string = rndCol();
+          xpos: int = -10)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printNimCx
       <li><a class="reference" href="#printNimCx%2Cint"
-    title="printNimCx(npos: int = terminalWidth() div 2 - 30)">printNimCx,<wbr>int</a></li>
+    title="printNimCx(npos: int = terminalWidth() div 2 - 30)">printNimCx(npos: int = terminalWidth() div 2 - 30)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cx10
       <li><a class="reference" href="#cx10%2Cint%2Cstring%2Cstring"
-    title="cx10(npos: int = 0; col: string = rndCol(); coltop: string = rndCol())">cx10,<wbr>int,<wbr>string,<wbr>string</a></li>
+    title="cx10(npos: int = 0; col: string = rndCol(); coltop: string = rndCol())">cx10(npos: int = 0; col: string = rndCol(); coltop: string = rndCol())</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">dotMatrixTyper
       <li><a class="reference" href="#dotMatrixTyper%2Cstring%2Cint%2Cstring"
-    title="dotMatrixTyper(s: string; xpos: int = 1; color: string = randcol())">dotMatrixTyper,<wbr>string,<wbr>int,<wbr>string</a></li>
+    title="dotMatrixTyper(s: string; xpos: int = 1; color: string = randcol())">dotMatrixTyper(s: string; xpos: int = 1; color: string = randcol())</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showCxFont
       <li><a class="reference" href="#showCxFont%2Cstring"
-    title="showCxFont(name: string)">showCxFont,<wbr>string</a></li>
+    title="showCxFont(name: string)">showCxFont(name: string)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">fprintln
       <li><a class="reference" href="#fprintln%2CT%2Cstring%2Cint%2Cbool%2Cbool%2Cset%5BStyle%5D%2Cstring"
     title="fprintln[T](astring: T; fgr: string = termwhite; xpos: int = 0;
             fitLine: bool = false; centered: bool = false;
-            styled: set[Style] = {}; substr: string = &quot;&quot;)">fprintln,<wbr>T,<wbr>string,<wbr>int,<wbr>bool,<wbr>bool,<wbr>set[Style],<wbr>string</a></li>
+            styled: set[Style] = {}; substr: string = &quot;&quot;)">fprintln[T](astring: T; fgr: string = termwhite; xpos: int = 0;
+            fitLine: bool = false; centered: bool = false;
+            styled: set[Style] = {}; substr: string = &quot;&quot;)</a></li>
 
   </ul>
 
@@ -908,7 +919,7 @@ printSlimNumber
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:16:20 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:48 UTC</small>
       </div>
     </div>
   </div>
