--- a/cxhash.html
+++ b/cxhash.html
@@ -98,22 +98,22 @@ window.addEventListener('DOMContentLoaded', main);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">getGitHash
       <li><a class="reference" href="#getGitHash"
-    title="getGitHash(): string">getGitHash</a></li>
+    title="getGitHash(): string">getGitHash(): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">verifyHash
       <li><a class="reference" href="#verifyHash%2Cstring%2CT"
-    title="verifyHash[T](kata: string; hsx: T): bool">verifyHash,<wbr>string,<wbr>T</a></li>
+    title="verifyHash[T](kata: string; hsx: T): bool">verifyHash[T](kata: string; hsx: T): bool</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">createHash
       <li><a class="reference" href="#createHash%2Cstring"
-    title="createHash(kata: string): auto">createHash,<wbr>string</a></li>
+    title="createHash(kata: string): auto">createHash(kata: string): auto</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">checkHash
       <li><a class="reference" href="#checkHash%2Cstring%2CT"
-    title="checkHash[T](kata: string; hsx: T)">checkHash,<wbr>string,<wbr>T</a></li>
+    title="checkHash[T](kata: string; hsx: T)">checkHash[T](kata: string; hsx: T)</a></li>
 
   </ul>
 
@@ -199,7 +199,7 @@ getGitHash to get the git hash during compile
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:16:15 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:41 UTC</small>
       </div>
     </div>
   </div>
