--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -104,87 +104,87 @@ window.addEventListener('DOMContentLoaded', main);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">showDns
       <li><a class="reference" href="#showDns%2Cstring"
-    title="showDns(hostdns: string = &quot;google.com&quot;)">showDns,<wbr>string</a></li>
+    title="showDns(hostdns: string = &quot;google.com&quot;)">showDns(hostdns: string = &quot;google.com&quot;)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">wifiStatus
       <li><a class="reference" href="#wifiStatus"
-    title="wifiStatus()">wifiStatus</a></li>
+    title="wifiStatus()">wifiStatus()</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showHosts
       <li><a class="reference" href="#showHosts%2Cstring"
-    title="showHosts(dm: string)">showHosts,<wbr>string</a></li>
+    title="showHosts(dm: string)">showHosts(dm: string)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showIpInfo
       <li><a class="reference" href="#showIpInfo%2Cstring"
-    title="showIpInfo(ip: string)">showIpInfo,<wbr>string</a></li>
+    title="showIpInfo(ip: string)">showIpInfo(ip: string)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxDig
       <li><a class="reference" href="#cxDig%2Cstring"
-    title="cxDig(ipadd: string): tuple">cxDig,<wbr>string</a></li>
+    title="cxDig(ipadd: string): tuple">cxDig(ipadd: string): tuple</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">pingy
       <li><a class="reference" href="#pingy%2Cstring%2Cint%2Cstring%2Cbool"
-    title="pingy(dest: string; pingcc: int = 3; col: string = termwhite; show: bool = true): int">pingy,<wbr>string,<wbr>int,<wbr>string,<wbr>bool</a></li>
+    title="pingy(dest: string; pingcc: int = 3; col: string = termwhite; show: bool = true): int">pingy(dest: string; pingcc: int = 3; col: string = termwhite; show: bool = true): int</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxDns
       <li><a class="reference" href="#cxDns%2Cstring"
-    title="cxDns(dns: string): tuple">cxDns,<wbr>string</a></li>
+    title="cxDns(dns: string): tuple">cxDns(dns: string): tuple</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getHosts
       <li><a class="reference" href="#getHosts%2Cstring"
-    title="getHosts(dm: string): seq[string]">getHosts,<wbr>string</a></li>
+    title="getHosts(dm: string): seq[string]">getHosts(dm: string): seq[string]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showWanIpInfo
       <li><a class="reference" href="#showWanIpInfo"
-    title="showWanIpInfo()">showWanIpInfo</a></li>
+    title="showWanIpInfo()">showWanIpInfo()</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getWanIP
       <li><a class="reference" href="#getWanIP"
-    title="getWanIP(): string">getWanIP</a></li>
+    title="getWanIP(): string">getWanIP(): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getIpInfo
       <li><a class="reference" href="#getIpInfo%2Cstring"
-    title="getIpInfo(ip: string): JsonNode">getIpInfo,<wbr>string</a></li>
+    title="getIpInfo(ip: string): JsonNode">getIpInfo(ip: string): JsonNode</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">localRouterIp
       <li><a class="reference" href="#localRouterIp"
-    title="localRouterIp(): string">localRouterIp</a></li>
+    title="localRouterIp(): string">localRouterIp(): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxPortCheck
       <li><a class="reference" href="#cxPortCheck%2Cstring"
-    title="cxPortCheck(cmd: string = &quot;lsof -i&quot;)">cxPortCheck,<wbr>string</a></li>
+    title="cxPortCheck(cmd: string = &quot;lsof -i&quot;)">cxPortCheck(cmd: string = &quot;lsof -i&quot;)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showDig
       <li><a class="reference" href="#showDig%2Cstring"
-    title="showDig(hostip: string = $&quot;172.217.5.14&quot;)">showDig,<wbr>string</a></li>
+    title="showDig(hostip: string = $&quot;172.217.5.14&quot;)">showDig(hostip: string = $&quot;172.217.5.14&quot;)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getWanIp2
       <li><a class="reference" href="#getWanIp2"
-    title="getWanIp2(): string">getWanIp2</a></li>
+    title="getWanIp2(): string">getWanIp2(): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showLocalIpInfo
       <li><a class="reference" href="#showLocalIpInfo"
-    title="showLocalIpInfo()">showLocalIpInfo</a></li>
+    title="showLocalIpInfo()">showLocalIpInfo()</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">localIp
       <li><a class="reference" href="#localIp"
-    title="localIp(): seq[string]">localIp</a></li>
+    title="localIp(): seq[string]">localIp(): seq[string]</a></li>
 
   </ul>
 
@@ -429,7 +429,7 @@ window.addEventListener('DOMContentLoaded', main);
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:15:46 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:08 UTC</small>
       </div>
     </div>
   </div>
