--- a/cxstats.html
+++ b/cxstats.html
@@ -104,30 +104,31 @@ window.addEventListener('DOMContentLoaded', main);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">showStats
       <li><a class="reference" href="#showStats%2CRunningStat%2Cint%2Cint"
-    title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)">showStats,<wbr>RunningStat,<wbr>int,<wbr>int</a></li>
+    title="showStats(x: RunningStat; n: int = 3; xpos: int = 1)">showStats(x: RunningStat; n: int = 3; xpos: int = 1)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">rolling_zscore
       <li><a class="reference" href="#rolling_zscore%2CopenArray%5Bfloat%5D%2CopenArray%5Bfloat%5D%2Cfloat"
     title="rolling_zscore(data: openArray[float]; observed_window: openArray[float];
-               decay: float = 0.9): float">rolling_zscore,<wbr>openArray[float],<wbr>openArray[float],<wbr>float</a></li>
+               decay: float = 0.9): float">rolling_zscore(data: openArray[float]; observed_window: openArray[float];
+               decay: float = 0.9): float</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showRegression
       <li><a class="reference" href="#showRegression%2CopenArray%5B%5D%2CopenArray%5B%5D%2Cint%2Cint"
-    title="showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)">showRegression,<wbr>openArray[],<wbr>openArray[],<wbr>int,<wbr>int</a></li>
+    title="showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)">showRegression(x, y: openArray[float | int]; n: int = 5; xpos: int = 1)</a></li>
   <li><a class="reference" href="#showRegression%2CRunningRegress%2Cint%2Cint"
-    title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)">showRegression,<wbr>RunningRegress,<wbr>int,<wbr>int</a></li>
+    title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)">showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">median
       <li><a class="reference" href="#median%2CopenArray%5Bfloat%5D"
-    title="median(xs: openArray[float]): float">median,<wbr>openArray[float]</a></li>
+    title="median(xs: openArray[float]): float">median(xs: openArray[float]): float</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">zscore
       <li><a class="reference" href="#zscore%2CopenArray%5BSomeNumber%5D"
-    title="zscore(data: openArray[SomeNumber]): seq[float]">zscore,<wbr>openArray[SomeNumber]</a></li>
+    title="zscore(data: openArray[SomeNumber]): seq[float]">zscore(data: openArray[SomeNumber]): seq[float]</a></li>
 
   </ul>
 
@@ -268,7 +269,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:16:13 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:39 UTC</small>
       </div>
     </div>
   </div>
