--- a/cxtime.html
+++ b/cxtime.html
@@ -132,177 +132,183 @@ window.addEventListener('DOMContentLoaded', main);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">validDate
       <li><a class="reference" href="#validDate%2Cstring"
-    title="validDate(adate: string): bool">validDate,<wbr>string</a></li>
+    title="validDate(adate: string): bool">validDate(adate: string): bool</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printTimeMsg
       <li><a class="reference" href="#printTimeMsg%2Cstring%2Cint"
-    title="printTimeMsg(atext: string = cxTime; xpos: int = 1): string">printTimeMsg,<wbr>string,<wbr>int</a></li>
+    title="printTimeMsg(atext: string = cxTime; xpos: int = 1): string">printTimeMsg(atext: string = cxTime; xpos: int = 1): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">duration
       <li><a class="reference" href="#duration%2Cref."
-    title="duration(co: ref (CxTimer)): float">duration,<wbr>ref.</a></li>
+    title="duration(co: ref (CxTimer)): float">duration(co: ref (CxTimer)): float</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">clearAllTimerResults
       <li><a class="reference" href="#clearAllTimerResults%2Cbool%2Cint"
-    title="clearAllTimerResults(quiet: bool = true; xpos: int = 3)">clearAllTimerResults,<wbr>bool,<wbr>int</a></li>
+    title="clearAllTimerResults(quiet: bool = true; xpos: int = 3)">clearAllTimerResults(quiet: bool = true; xpos: int = 3)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">resetTimer
       <li><a class="reference" href="#resetTimer%2Cref."
-    title="resetTimer(co: ref (CxTimer))">resetTimer,<wbr>ref.</a></li>
+    title="resetTimer(co: ref (CxTimer))">resetTimer(co: ref (CxTimer))</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">day
       <li><a class="reference" href="#day%2Cstring"
-    title="day(aDate: string): string">day,<wbr>string</a></li>
+    title="day(aDate: string): string">day(aDate: string): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxDuration
       <li><a class="reference" href="#cxDuration%2C%2C"
-    title="cxDuration(tstart: int | float; tend: int | float): string">cxDuration,<wbr>,<wbr></a></li>
+    title="cxDuration(tstart: int | float; tend: int | float): string">cxDuration(tstart: int | float; tend: int | float): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getAmzDateString
       <li><a class="reference" href="#getAmzDateString"
-    title="getAmzDateString(): string">getAmzDateString</a></li>
+    title="getAmzDateString(): string">getAmzDateString(): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">clearTimerResults
       <li><a class="reference" href="#clearTimerResults%2Cstring%2Cbool%2Cint"
-    title="clearTimerResults(aname: string = &quot;&quot;; quiet: bool = true; xpos: int = 3)">clearTimerResults,<wbr>string,<wbr>bool,<wbr>int</a></li>
+    title="clearTimerResults(aname: string = &quot;&quot;; quiet: bool = true; xpos: int = 3)">clearTimerResults(aname: string = &quot;&quot;; quiet: bool = true; xpos: int = 3)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">year
       <li><a class="reference" href="#year%2Cstring"
-    title="year(aDate: string): string">year,<wbr>string</a></li>
+    title="year(aDate: string): string">year(aDate: string): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printLnDateMsg
       <li><a class="reference" href="#printLnDateMsg%2Cstring%2Cint"
-    title="printLnDateMsg(atext: string = getDateStr(); xpos: int = 1): string">printLnDateMsg,<wbr>string,<wbr>int</a></li>
+    title="printLnDateMsg(atext: string = getDateStr(); xpos: int = 1): string">printLnDateMsg(atext: string = getDateStr(); xpos: int = 1): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printLnTimeMsg
       <li><a class="reference" href="#printLnTimeMsg%2Cstring%2Cint"
-    title="printLnTimeMsg(atext: string = cxTime; xpos: int = 1): string">printLnTimeMsg,<wbr>string,<wbr>int</a></li>
+    title="printLnTimeMsg(atext: string = cxTime; xpos: int = 1): string">printLnTimeMsg(atext: string = cxTime; xpos: int = 1): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">month
       <li><a class="reference" href="#month%2Cstring"
-    title="month(aDate: string): string">month,<wbr>string</a></li>
+    title="month(aDate: string): string">month(aDate: string): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getRndDate
       <li><a class="reference" href="#getRndDate%2Cint%2Cint"
     title="getRndDate(minyear: int = parseInt(year(getDateStr(now()))) - 50;
-           maxyear: int = parseInt(year(getDateStr(now()))) + 50): string">getRndDate,<wbr>int,<wbr>int</a></li>
+           maxyear: int = parseInt(year(getDateStr(now()))) + 50): string">getRndDate(minyear: int = parseInt(year(getDateStr(now()))) - 50;
+           maxyear: int = parseInt(year(getDateStr(now()))) + 50): string</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">cxSystemUptime
+      <li><a class="reference" href="#cxSystemUptime"
+    title="cxSystemUptime(): string">cxSystemUptime(): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">newCxtimer
       <li><a class="reference" href="#newCxtimer%2Cstring"
-    title="newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)">newCxtimer,<wbr>string</a></li>
+    title="newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)">newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printDateMsg
       <li><a class="reference" href="#printDateMsg%2Cstring%2Cint"
-    title="printDateMsg(atext: string = getDateStr(); xpos: int = 1): string">printDateMsg,<wbr>string,<wbr>int</a></li>
+    title="printDateMsg(atext: string = getDateStr(); xpos: int = 1): string">printDateMsg(atext: string = getDateStr(); xpos: int = 1): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printLnDTimeMsg
       <li><a class="reference" href="#printLnDTimeMsg%2Cstring%2Cint"
-    title="printLnDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string">printLnDTimeMsg,<wbr>string,<wbr>int</a></li>
+    title="printLnDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string">printLnDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">printDTimeMsg
       <li><a class="reference" href="#printDTimeMsg%2Cstring%2Cint"
-    title="printDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string">printDTimeMsg,<wbr>string,<wbr>int</a></li>
+    title="printDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string">printDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">createSeqDate
       <li><a class="reference" href="#createSeqDate%2Cstring%2Cstring"
-    title="createSeqDate(fromDate: string; toDate: string): seq[string]">createSeqDate,<wbr>string,<wbr>string</a></li>
+    title="createSeqDate(fromDate: string; toDate: string): seq[string]">createSeqDate(fromDate: string; toDate: string): seq[string]</a></li>
   <li><a class="reference" href="#createSeqDate%2Cstring%2Cint"
-    title="createSeqDate(fromDate: string; days: int = 1): seq[string]">createSeqDate,<wbr>string,<wbr>int</a></li>
+    title="createSeqDate(fromDate: string; days: int = 1): seq[string]">createSeqDate(fromDate: string; days: int = 1): seq[string]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">saveTimerResults
       <li><a class="reference" href="#saveTimerResults%2Cref."
-    title="saveTimerResults(b: ref (CxTimer))">saveTimerResults,<wbr>ref.</a></li>
+    title="saveTimerResults(b: ref (CxTimer))">saveTimerResults(b: ref (CxTimer))</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxHRTimer
       <li><a class="reference" href="#cxHRTimer%2CTime%2CTime"
-    title="cxHRTimer(tstart: Time = getTime(); tend: Time = getTime()): auto">cxHRTimer,<wbr>Time,<wbr>Time</a></li>
+    title="cxHRTimer(tstart: Time = getTime(); tend: Time = getTime()): auto">cxHRTimer(tstart: Time = getTime(); tend: Time = getTime()): auto</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">sleepy
       <li><a class="reference" href="#sleepy%2CT"
-    title="sleepy[T: float | int](secs: T)">sleepy,<wbr>T</a></li>
+    title="sleepy[T: float | int](secs: T)">sleepy[T: float | int](secs: T)</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">startTimer
       <li><a class="reference" href="#startTimer%2Cref."
-    title="startTimer(co: ref (CxTimer))">startTimer,<wbr>ref.</a></li>
+    title="startTimer(co: ref (CxTimer))">startTimer(co: ref (CxTimer))</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">isoweek
       <li><a class="reference" href="#isoweek%2CDateTime"
-    title="isoweek(dt: DateTime): WeekRange">isoweek,<wbr>DateTime</a></li>
+    title="isoweek(dt: DateTime): WeekRange">isoweek(dt: DateTime): WeekRange</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">compareDates
       <li><a class="reference" href="#compareDates%2Cstring%2Cstring"
-    title="compareDates(startDate, endDate: string): int">compareDates,<wbr>string,<wbr>string</a></li>
+    title="compareDates(startDate, endDate: string): int">compareDates(startDate, endDate: string): int</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxDayOfWeek
       <li><a class="reference" href="#cxDayOfWeek%2Cstring"
-    title="cxDayOfWeek(datestr: string): string">cxDayOfWeek,<wbr>string</a></li>
+    title="cxDayOfWeek(datestr: string): string">cxDayOfWeek(datestr: string): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">plusDays
       <li><a class="reference" href="#plusDays%2Cstring%2Cint"
-    title="plusDays(aDate: string; days: int): string">plusDays,<wbr>string,<wbr>int</a></li>
+    title="plusDays(aDate: string; days: int): string">plusDays(aDate: string; days: int): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">showTimerResults
       <li><a class="reference" href="#showTimerResults%2Cstring"
-    title="showTimerResults(aname: string)">showTimerResults,<wbr>string</a></li>
+    title="showTimerResults(aname: string)">showTimerResults(aname: string)</a></li>
   <li><a class="reference" href="#showTimerResults"
-    title="showTimerResults()">showTimerResults</a></li>
+    title="showTimerResults()">showTimerResults()</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getMsecs
       <li><a class="reference" href="#getMsecs%2CDuration"
-    title="getMsecs(d: Duration): float64">getMsecs,<wbr>Duration</a></li>
+    title="getMsecs(d: Duration): float64">getMsecs(d: Duration): float64</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">getNextMonday
       <li><a class="reference" href="#getNextMonday%2Cstring"
-    title="getNextMonday(adate: string): string">getNextMonday,<wbr>string</a></li>
+    title="getNextMonday(adate: string): string">getNextMonday(adate: string): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">lapTimer
       <li><a class="reference" href="#lapTimer%2Cref."
-    title="lapTimer(co: ref (CxTimer)): auto">lapTimer,<wbr>ref.</a></li>
+    title="lapTimer(co: ref (CxTimer)): auto">lapTimer(co: ref (CxTimer)): auto</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">minusDays
       <li><a class="reference" href="#minusDays%2Cstring%2Cint"
-    title="minusDays(aDate: string; days: int): string">minusDays,<wbr>string,<wbr>int</a></li>
+    title="minusDays(aDate: string; days: int): string">minusDays(aDate: string; days: int): string</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">stopTimer
       <li><a class="reference" href="#stopTimer%2Cref."
-    title="stopTimer(co: ref (CxTimer))">stopTimer,<wbr>ref.</a></li>
+    title="stopTimer(co: ref (CxTimer))">stopTimer(co: ref (CxTimer))</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">cxTimeZone
       <li><a class="reference" href="#cxTimeZone%2CcxTz"
-    title="cxTimeZone(amode: cxTz = long): string">cxTimeZone,<wbr>cxTz</a></li>
+    title="cxTimeZone(amode: cxTz = long): string">cxTimeZone(amode: cxTz = long): string</a></li>
 
   </ul>
 
@@ -341,7 +347,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2020-01-26
+Latest      : 2021-02-22
 
 Compiler    : latest stable or devel branch
 
@@ -766,6 +772,14 @@ getNextMonday<pre class="listing"><span class="Identifier">echo</span>  <span cl
 returns isoweek for a given date
 
 </dd>
+<a id="cxSystemUptime"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#cxSystemUptime"><span class="Identifier">cxSystemUptime</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">OSError</span><span class="Other">]</span><span class="Other">,</span>
+                                <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ExecIOEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+Returns system uptime
+
+</dd>
 <a id="getMsecs,Duration"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#getMsecs%2CDuration"><span class="Identifier">getMsecs</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <span class="Identifier">Duration</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float64</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -844,7 +858,7 @@ returns isoweek for a given date
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-01-26 20:52:51 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-02-27 12:18:41 UTC</small>
       </div>
     </div>
   </div>
